--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 :root {
@@ -29,16 +30,17 @@
 
 .resume-view-container .resume-view-header {
   background-color: #3545a7;
-  border: solid 2px;
+  /* border: solid 2px; */
   color: white;
   height: 20%;
 }
 
 .resume-view-container .resume-view-body .resume-view-sidebar {
   background-color: #021691;
-  border-left: solid 1px;
-  border-bottom: solid 1px;
+  /* border-left: solid 1px;
+  border-bottom: solid 1px; */
   width: 33%;
+  color: white;
 }
 .resume-view-container .resume-view-body .resume-view-main-body {
   border-left: solid 1px;
@@ -69,4 +71,26 @@
 
 .resume-heading-container p {
   font-weight: 600;
+}
+
+.resume-sidebar-container {
+  margin: 1.5em;
+  font-size: 1.1rem;
+  font-weight: 550;
+}
+
+.resume-sidebar-container div {
+  margin-bottom: 1.5em;
+}
+
+.resume-sidebar-container .resume-sidebar-indent-address {
+  display: flex;
+  gap: 1rem;
+}
+
+.resume-sidebar-container
+  .resume-sidebar-indent-address
+  .resume-sidebar-break-word {
+  word-break: break-all;
+  word-wrap: break-word;
 }
