--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 :root {
@@ -93,4 +93,23 @@
   .resume-sidebar-break-word {
   word-break: break-all;
   word-wrap: break-word;
+}
+
+.resume-work-expi-container,
+.resume-educ-info-container {
+  margin: 2rem;
+  font-size: 1.1rem;
+}
+
+/* line after all work experiences */
+.resume-educ-add-line-top {
+  padding-top: 0.5rem;
+  border-top: solid 1px;
+}
+
+.resume-work-expi-container p,
+.resume-work-expi-container h1,
+.resume-educ-info-container p,
+.resume-educ-info-container h2 {
+  margin-bottom: 0.4rem;
 }
